# core-v.2.2

./: Dockerfile  LICENSE  MANIFEST.md  Makefile  QUICKSTART.md  README.md  axonml_inference.py  axonml_models.py  docker-compose.yml  init_axonos.sh  pyproject.toml  requirements-api.txt  requirements-core.txt  requirements-dev.txt  requirements-hardware.txt  requirements.txt  test_new_architecture.py  test_package_structure.py  test_v2.2_comprehensive.py
docs/guides/: GETTING_STARTED.md  axonos_developer_guide.md  axonos_protocols_specification.md  axonos_security_specification.md
examples/advanced/: advanced_ml.py
examples/basic/: basic_usage.py
examples/realtime/: realtime_streaming.py
src/axonos/: __init__.py
src/axonos/api/: __init__.py
src/axonos/core/: __init__.py
src/axonos/core/ml/: __init__.py  axonml_models.py
src/axonos/core/pipeline/: __init__.py  axonml_inference.py
src/axonos/core/signal/: __init__.py  processing.py
src/axonos/hardware/: __init__.py  abstract.py  devices.py
src/axonos/protocol/: __init__.py
src/axonos/security/: __init__.py  encryption.py  vault.py
